--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
         <script src="script/codemirror/mode/markdown/markdown.js"></script>
         <script src="script/codemirror/overlay/markOverlay.js"></script>
         <script src="script/codemirror/overlay/entityOverlay.js"></script>
+        <script src="script/codemirror/overlay/underlineOverlay.js"></script>
         <script src="script/codemirror/addon/edit/closebrackets.js"></script>
         <script src="script/codemirror/addon/edit/continuelist.js"></script>
         <script src="script/codemirror/addon/search/searchcursor.js"></script>
         <script src="script/codemirror/addon/hint/show-hint.js"></script>
         <script src="script/codemirror/addon/hint/anyword-hint.js"></script>
+        <script src="script/codemirror/addon/selection/active-line.js"></script>
     </head>
 
     <body class="theme-dark">
@@ -257,11 +259,13 @@
                 keyMap: "sublime",
                 direction: getSetting("editorDirection", "ltr"),
                 showCursorWhenSelecting: true,
-                autoCloseTags: true
+                autoCloseTags: true,
+                styleActiveLine: getSetting("editorHighlightActiveLine", "true") === "true",
             });
 
             editor.addOverlay(markOverlay);
             editor.addOverlay(htmlEntityOverlay);
+            editor.addOverlay(underlineOverlay);
 
             const editorMenu = document.getElementById("editorMenu");
             const hrContextualSeparator = document.getElementById("contextual-selection-separator");
