--- a/settings.html
+++ b/settings.html
@@ -163,6 +163,13 @@
                             </label>
                             <span class="switch-text">Full width</span>
                         </div>
+                        <div class="switch-wrapper">
+                            <label class="switch">
+                                <input type="checkbox" id="editorHighlightActiveLine" onchange="setSetting('editorHighlightActiveLine', this.checked); location.reload()" />
+                                <span class="slider"></span>
+                            </label>
+                            <span class="switch-text">Highlight active line</span>
+                        </div>
                     </div>
                     <div class="setting">
                         <h4>Date & Time</h4>
@@ -336,11 +343,13 @@
                 const cbxEditorLineNumbers = document.getElementById("editorLineNumbers");
                 const cbxEditorDirection = document.getElementById("editorDirection");
                 const cbxEditorWidth = document.getElementById("editorWidth");
+                const cbxEditorHighlightActiveLine = document.getElementById('editorHighlightActiveLine');
                 const txtEditorDate = document.getElementById("editorDate");
                 if (getSetting("editorShowHints", "true") === "true") cbxEditorShowHints.checked = "true";
                 if (getSetting("editorLineNumbers", "false") === "true") cbxEditorLineNumbers.checked = "true";
                 if (getSetting("editorDirection", "ltr") === "rtl") cbxEditorDirection.checked = "true";
                 if (getSetting("editorWidth", "false") === "true") cbxEditorWidth.checked = "true";
+                if (getSetting("editorHighlightActiveLine", "true") === "true") cbxEditorHighlightActiveLine.checked = "true";
                 txtEditorDate.value = getSetting("dateFormat", "%d/%m/%Y %H:%M");
 
                 // status bar
