--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         <script src="script/showdown/extension/internalLink.js"></script>
         <script src="script/showdown/extension/definitionList.js"></script>
         <script src="script/showdown/extension/abbreviation.js"></script>
+        <script src="script/showdown/extension/rubyText.js"></script>
         <script src="script/editorTools.js"></script>
         <script src="script/insert.js"></script>
         <script src="script/prompts.js"></script>
@@ -328,7 +329,7 @@
             });
 
             const converter = new showdown.Converter({
-                extensions: ['bannerImage', 'internalLink', 'definitionList', 'abbreviation'],
+                extensions: ['bannerImage', 'internalLink', 'definitionList', 'abbreviation', 'rubyText'],
             });
 
             const preview = document.getElementById("preview");
