--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" href="style/share.css" />
         <link rel="stylesheet" href="style/editor.css" />
         <link rel="stylesheet" href="style/prompts.css" />
+        <link rel="stylesheet" href="script/highlight/lib/highlight.css">
         <link rel="stylesheet" href="script/codemirror/lib/codemirror.css" />
         <link rel="stylesheet" href="script/codemirror/addon/hint/show-hint.css" />
 
@@ -224,6 +225,7 @@
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+        <script src="script/highlight/lib/highlight.min.js"></script>
         <script src="script/html2pdf.bundle.min.js"></script>
         <script src="script/resources.js"></script>
         <script src="script/showdown/lib/showdown.js"></script>
@@ -570,6 +572,10 @@
                 };
             
                 preview.innerHTML = converter.makeHtml(markdown);
+
+                preview.querySelectorAll('pre code').forEach((block) => {
+                    hljs.highlightElement(block);
+                });
             
                 const selectors = ["img", "audio", "video", "iframe"];
                 for (const tag of selectors) {
