--- a/about.html
+++ b/about.html
@@ -12,27 +12,77 @@
         <p translate="no">1.94.3</p>
         Cohesion is a free and opensource markdown editor
         <hr>
-        <a href="https://github.com/flarom/cohesion" target="_blank">Repository</a> | 
+        <a href="https://github.com/flarom/cohesion" target="_blank">Repository</a> • 
+        <a href="https://github.com/flarom/cohesion/wiki" target="_blank">Learn</a> • 
         <a onclick="promptMessage(`
-                <b>Libraries</b>
-                <ul>
-                    <li><a target='_blank' href='https://codemirror.net/'>Text input field (CodeMirror)</a></li>
-                    <li><a target='_blank' href='https://showdownjs.com/'>Markdown processor (Showdown)</a></li>
-                    <li><a target='_blank' href='https://www.npmjs.com/package/jszip'>Folder compressor (jszip)</a></li>
-                    <li><a target='_blank' href='https://ekoopmans.github.io/html2pdf.js/'>PDF processor (html2pdf.js)</a></li>
-                </ul>
-                <b>Graphics</b>
-                <ul>
-                    <li><a target='_blank' href='https://fonts.google.com/icons'>Symbolic icons (Google Material Icons)</a></li>
-                    <li><a target='_blank' href='https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/'>Colored icons (Papirus)</a></li>
-                    <li>The Cohesion logo is a recolor of the <a target='_blank' href='https://apps.gnome.org/TextEditor/'>GNOME Text Editor</a> logo</li>  
-                </ul>
-                <b>Design</b>
-                <ul>
-                    <li>Cohesion follows the <a target='_blank' href='https://developer.gnome.org/hig/'>GNOME Human Interface Guidelines</a></li>
-                </ul>
-            `)" style="cursor: pointer;">Used libraries and graphics
-        </a> |
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Libraries</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a href='https://codemirror.net/' rel='noopener noreferrer' target='_blank'>CodeMirror</a></td>
+                            <td>Text editor field</td>
+                        </tr>
+                        <tr>
+                            <td><a href='https://showdownjs.com/' rel='noopener noreferrer' target='_blank'>Showdownjs</a></td>
+                            <td>Markdown processor</td>
+                        </tr>
+                        <tr>
+                            <td><a href='https://stuk.github.io/jszip/' rel='noopener noreferrer' target='_blank'>JSZip</a></td>
+                            <td>Folder compressor</td>
+                        </tr>
+                        <tr>
+                            <td><a href='https://ekoopmans.github.io/html2pdf.js/' rel='noopener noreferrer' target='_blank'>html2pdf.js</a></td>
+                            <td>HTML to PDF parser</td>
+                        </tr>
+                        <tr>
+                            <td><a href='https://highlightjs.org/' rel='noopener noreferrer' target='_blank'>highlight.js</a></td>
+                            <td>Syntax highlighting</td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th>Graphics</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a href='https://fonts.google.com/icons' rel='noopener noreferrer' target='_blank'>Google Material Symbols &amp; Icons</a></td>
+                            <td>Symbolic icons</td>
+                        </tr>
+                        <tr>
+                            <td><a href='https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/' rel='noopener noreferrer' target='_blank'>Papirus icons</a></td>
+                            <td>Colored icons</td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th>General inspiration</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><a href='https://apps.gnome.org/TextEditor/' rel='noopener noreferrer' target='_blank'>GNOME Text Editor</a></td>
+                            <td>Original app icon</td>
+                        </tr>
+                        <tr>
+                            <td><a href='https://apps.gnome.org/Apostrophe/' rel='noopener noreferrer' target='_blank'>Apostrophe</a></td>
+                            <td>Layout and design</td>
+                        </tr>
+                        <tr>
+                            <td><a href='https://developer.gnome.org/hig/' rel='noopener noreferrer' target='_blank'>GNOME Human Interface Guidelines</a></td>
+                            <td>Design language</td>
+                        </tr>
+                    </tbody>
+                </table>
+            `)" style="cursor: pointer;">Libraries and graphics
+        </a> •
         <a onclick="promptMessage(`
                 <p>Copyright (C) 2025, F. Bergamin.</p>
                 <p>This application comes with absolutely no warranty. See the <a href='https://www.gnu.org/licenses/gpl-3.0.html' target='_blank'>GNU General Public License, version 3 or later</a> for more details.</p>
