--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             Keyboard shortcuts
                             <kbd>Ctrl+?</kbd>
                         </button>
-                        <button class="text-button" onmouseup="showMessageFromFile('dialogs/about.html'); hideAllMenus();">
+                        <button class="text-button" onmouseup="showMessageFromFile('about.html'); hideAllMenus();">
                             About Cohesion
                             <kbd>F1</kbd>
                         </button>
@@ -849,7 +849,7 @@
                 //// About cohesion (f1)
                 else if (event.key === "F1") {
                     event.preventDefault();
-                    showMessageFromFile("dialogs/about.html");
+                    showMessageFromFile("about.html");
                 }
                 //// Toggle sidebar (f9)
                 else if (event.key === "F9") {
