--- a/dialogs/settings.html
+++ b/dialogs/settings.html
@@ -104,7 +104,9 @@
                         <button id="theme-epaper" class="ball" style="background-color: #ffffff; color: #000000" onclick="setSetting('theme', 'theme-epaper');loadSettings(); updateSelectedTheme()">ePaper</button>
                         <button id="theme-light" class="ball" style="background-color: #ffffff; color: #3c3c3c" onclick="setSetting('theme', 'theme-light');loadSettings(); updateSelectedTheme()">Light</button>
                         <button id="theme-cream" class="ball" style="background-color: #f5eacb; color: #4b3a25" onclick="setSetting('theme', 'theme-cream');loadSettings(); updateSelectedTheme()">Cream</button>
+                        <button id="theme-nord" class="ball" style="background-color: #2e3440; color: #d8dee9" onclick="setSetting('theme', 'theme-nord');loadSettings(); updateSelectedTheme()">Nord</button>
                         <button id="theme-dark" class="ball" style="background-color: #303030; color: #dddddd" onclick="setSetting('theme', 'theme-dark');loadSettings(); updateSelectedTheme()">Dark</button>
+                        <button id="theme-monokai" class="ball" style="background-color: #272822; color: #F8F8F2" onclick="setSetting('theme', 'theme-monokai');loadSettings(); updateSelectedTheme()">Monokai</button>
                         <button id="theme-cream-dark" class="ball" style="background-color: #1c1a17; color: #e0d6c0" onclick="setSetting('theme', 'theme-cream-dark');loadSettings(); updateSelectedTheme()">Coffee</button>
                         <button id="theme-oled" class="ball" style="background-color: #000000; color: #888888" onclick="setSetting('theme', 'theme-oled');loadSettings(); updateSelectedTheme()">OLED</button>
                     </div>
