--- a/dialogs/settings.html
+++ b/dialogs/settings.html
@@ -374,7 +374,7 @@
                 if (getSetting("editorWidth", "false") === "true") cbxEditorWidth.checked = "true";
                 if (getSetting("editorHighlightActiveLine", "true") === "true") cbxEditorHighlightActiveLine.checked = "true";
                 if (getSetting("editorAutoCloseBrackets", "true") === "true") cbxEditorAutoCloseBrackets.checked = "true";
-                if (getSetting("editorAutoCloseTags", "true") === "true") cbxEditorAutoCloseTags.checked = "true";
+                if (getSetting("editorAutoCloseTags", "false") === "true") cbxEditorAutoCloseTags.checked = "true";
                 txtEditorDate.value = getSetting("dateFormat", "%d/%m/%Y %H:%M");
 
                 // status bar
