--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 theme: "default",
                 lineWrapping: true,
                 autoCloseBrackets: getSetting("editorAutoCloseBrackets", "true") === "true" ,
-                autoCloseTags: getSetting("editorAutoCloseTags", "true") === "true" ,
+                autoCloseTags: getSetting("editorAutoCloseTags", "false") === "true" ,
                 extraKeys: {
                     Enter: "newlineAndIndentContinueMarkdownList",
                     "Ctrl-Space": "autocomplete",
