--- a/landing.html
+++ b/landing.html
@@ -145,7 +145,7 @@
         <div>
             <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
                 <img src="cohesion/favicon.png" alt="" width="48">
-                <h2>Cohesion</h2>
+                <h2 translate="no">Cohesion</h2>
             </a>
         </div>
         <div style="display: flex; gap: 5px;">
