--- a/landing.html
+++ b/landing.html
@@ -19,6 +19,7 @@
             gap: 20px;
             backdrop-filter: blur(10px);
             justify-content: space-between;
+            z-index: 9999;
         }
 
         .hero {
@@ -36,7 +37,8 @@
             max-width: 900px;
             width: 100%;
             height: auto;
-            box-shadow: 0px 40px 30px -20px #00000077;
+            /* box-shadow: 0px 40px 30px -20px #00000077; */
+            box-shadow: 20px 20px 30px #00000077, 30px 30px 0px #3584e4;
         }
 
         section.normal {
@@ -44,6 +46,54 @@
             margin: 0 auto;
             margin-top: 20px;
             margin-bottom: 20px;
+        }
+
+        section.filler {
+            color: var(--background-color);
+            height: 300px;
+            border-radius: 15px;
+            overflow: hidden;
+            font-weight: bolder;
+            position: relative;
+            user-select: none;
+        }
+
+        .filler-start-now {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            backdrop-filter: blur(3px);
+        }
+
+        .infinite-scroll {
+            width: 200%;
+            overflow: hidden;
+            white-space: nowrap;
+            position: relative;
+            height: 1.5em;
+            margin: 0;
+            font-size: 165pt;
+            display: flex;
+            align-items: center;
+            -webkit-text-stroke: 1px var(--text-color);
+        }
+        .scroll-content {
+            display: inline-block;
+            padding-right: 2em;
+            animation: scroll-left 86s linear infinite;
+            will-change: transform;
+        }
+        .infinite-scroll.right .scroll-content {
+            animation-name: scroll-right;
+        }
+        @keyframes scroll-left {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-50%); }
+        }
+        @keyframes scroll-right {
+            0% { transform: translateX(-50%); }
+            100% { transform: translateX(0); }
         }
 
         .note {
@@ -91,7 +141,7 @@
             background: var(--field-color);
         }
 
-        .hero.button.primary:hover .icon {
+        .hero button.primary:hover .icon {
             animation: pencil_move 0.5s;
         }
 
@@ -152,7 +202,7 @@
             <button class="secondary" onclick="fadeOutAllDialogs()">Editor</button>
             <button class="secondary" onclick="window.open('https://github.com/flarom/cohesion/wiki')">Documentation</button>
             <button class="secondary" onclick="window.open('https://github.com/flarom/cohesion')">GitHub</button>
-            <button class="secondary" onclick="changeTheme();" style="font-size: large;"><span class="icon">routine</span></button>
+            <button class="secondary" onclick="changeTheme();" style="font-size: large;" translate="no"><span class="icon">routine</span></button>
         </div>
     </header>
 
@@ -160,29 +210,31 @@
         <div>
             <h1>Bring clarity to your ideas.</h1>
             <p>Cohesion is a minimal, beautiful, Extended Markdown editor<br>designed for clarity and expression.</p>
-            <div style="margin-top: 40px; margin-bottom: 40px; display: flex; gap: 5px;">
+            <div style="margin-top: 40px; margin-bottom: 40px; display: flex; gap: 5px;" translate="no">
                 <button class="primary" onclick="fadeOutAllDialogs()">
                     <span class="icon" style="font-size: 1.5em;">edit</span>
                     <span id="primary-button-text">
                         Start creating...
                     </span>
                 </button>
-                <button class="secondary">
+                <button class="secondary" onclick="scrollToFeatures()">
                     Learn more
                 </button>
             </div>
         </div>
-        <img src="cohesion/scrshot.png" alt="">
+        <div style="perspective: 40cm;">
+            <img src="cohesion/scrshot.png" style="transform: rotateY(-20deg) rotateX(5deg);" alt="">
+        </div>
     </section>
 
-    <section class="normal">
+    <section class="normal" id="features">
         <h2>Features</h2>
         <p>this section is a work in progress with anime girls</p>
         <div class="feature-container left">
             <img src="https://placewaifu.com/image/1920/1080" alt="">
             <div>
                 <h3>Markdown-Based</h3>
-                <p>dummy text</p>
+                <p>Write fastly using extended Markdown, including tables, lists, code blocks, and more.</p>
             </div>
         </div>
         <div class="feature-container right">
@@ -196,33 +248,75 @@
             <img src="https://placewaifu.com/image/1920/1080" alt="">
             <div>
                 <h3>Themes</h3>
-                <p>Cohesion has 8 themes in your disposal by default!</p>
+                <p>Personalize your experience with 8 themes. Switch between light and dark modes, or choose from unique palettes to make your writing environment more comfortable and inspiring.</p>
+            </div>
+        </div>
+        <div class="feature-container right">
+            <img src="https://placewaifu.com/image/1920/1080" alt="">
+            <div>
+                <h3>Easy export</h3>
+                <p>Export your notes to formats like PDF, HTML, or Markdown with just one click.</p>
+            </div>
+        </div>
+        <div class="feature-container left">
+            <img src="https://placewaifu.com/image/1920/1080" alt="">
+            <div>
+                <h3>Instant search</h3>
+                <p>Quickly find any note or piece of text using the built-in instant search, streamlining your workflow.</p>
+            </div>
+        </div>
+        <div class="feature-container right">
+            <img src="https://placewaifu.com/image/1920/1080" alt="">
+            <div>
+                <h3>Distraction-free editor</h3>
+                <p>Focused writing that hides menus and bars, allowing full concentration on the content.</p>
             </div>
         </div>
     </section>
 
-    <div class="note">
+    <section class="filler">
+        <div class="infinite-scroll left">
+            <div class="scroll-content">
+                Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion 
+                Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion 
+            </div>
+        </div>
+        <button class="primary filler-start-now" onclick="fadeOutAllDialogs()">
+            <span class="icon" style="font-size: 1.5em;">edit</span>
+            <span id="primary-button-text2">
+                Start creating...
+            </span>
+        </button>
+    </section>
+
+    <div class="note" id="note">
         <p>Start writing now — you can return here anytime from the 'Learn' menu.</p>
     </div>
 
     <script>
         (() => {
             const btnText = document.getElementById('primary-button-text');
+            const btnText2 = document.getElementById('primary-button-text2');
             let showCursor = false;
             setInterval(() => {
                 showCursor = !showCursor;
                 btnText.textContent = showCursor ? 'Start creating... |' : 'Start creating...';
+                btnText2.textContent = showCursor ? 'Start creating... |' : 'Start creating...';
             }, 600);
         })();
 
         function changeTheme() {
-            let current = getSetting ? getSetting('theme') : document.body.className;
+            let current = getSetting('theme');
             if (current === 'theme-dark') {
                 setSetting('theme', 'theme-light');
             } else {
                 setSetting('theme', 'theme-dark');
             }
             loadSettings();
+        }
+
+        function scrollToFeatures() {
+            document.getElementById('features').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
 </body>
