--- a/landing.html
+++ b/landing.html
@@ -22,6 +22,19 @@
             z-index: 9999;
         }
 
+        footer {
+            display: flex;
+        }
+
+        footer ul {
+            padding-left: 0;
+        }
+
+        footer a {
+            color: var(--link-color);
+            text-decoration: none;
+        }
+
         .hero {
             display: flex;
             align-items: center;
@@ -188,6 +201,29 @@
             flex-direction: row-reverse;
             text-align: end;
         }
+
+        .thing-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 25px;
+            margin-bottom: 25px;
+        }
+
+        .thing {
+            width: 24px;
+            height: 24px;
+            background-color: var(--text-color);
+            animation: thing-spin 1.5s infinite;
+        }
+
+        @keyframes thing-spin {
+            0%   { border-radius: 30px 10px 10px 10px; }
+            25%  { border-radius: 10px 30px 10px 10px; }
+            50%  { border-radius: 10px 10px 30px 10px; }
+            75%  { border-radius: 10px 10px 10px 30px; }
+            100% { border-radius: 30px 10px 10px 10px; }
+        }
     </style>
 </head>
 <body>
@@ -288,6 +324,20 @@
             </span>
         </button>
     </section>
+
+    <footer>
+        <div>
+            <b>Cohesion</b>
+            <ul style="list-style: none;">
+                <li><a href="https://github.com/flarom/cohesion">GitHub</a></li>
+                <li><a href="https://github.com/flarom/cohesion">GitHub</a></li>
+            </li>
+        </div>
+    </footer>
+    
+    <div class="thing-container">
+        <div class="thing"></div>
+    </div>
 
     <div class="note" id="note">
         <p>Start writing now — you can return here anytime from the 'Learn' menu.</p>
