--- a/landing.html
+++ b/landing.html
@@ -187,7 +187,7 @@
         }
 
         .feature-container img {
-            border-radius: 5px;
+            border-radius: 15px;
             max-width: 500px;
             width: 100%;
             height: auto;
@@ -281,7 +281,7 @@
             </div>
         </div>
         <div class="feature-container left">
-            <img src="https://placewaifu.com/image/1920/1080" alt="">
+            <img src="cohesion/landing/themes.png" alt="">
             <div>
                 <h3>Themes</h3>
                 <p>Personalize your experience with 8 themes. Switch between light and dark modes, or choose from unique palettes to make your writing environment more comfortable and inspiring.</p>
@@ -295,14 +295,14 @@
             </div>
         </div>
         <div class="feature-container left">
-            <img src="https://placewaifu.com/image/1920/1080" alt="">
+            <img src="cohesion/landing/search.png" alt="">
             <div>
                 <h3>Instant search</h3>
                 <p>Quickly find any note or piece of text using the built-in instant search, streamlining your workflow.</p>
             </div>
         </div>
         <div class="feature-container right">
-            <img src="https://placewaifu.com/image/1920/1080" alt="">
+            <img src="cohesion/landing/distraction.png" alt="">
             <div>
                 <h3>Distraction-free editor</h3>
                 <p>Focused writing that hides menus and bars, allowing full concentration on the content.</p>
