--- a/landing.html
+++ b/landing.html
@@ -50,8 +50,7 @@
             max-width: 900px;
             width: 100%;
             height: auto;
-            /* box-shadow: 0px 40px 30px -20px #00000077; */
-            box-shadow: 20px 20px 30px #00000077, 30px 30px 0px #3584e4;
+            box-shadow: 0px 40px 30px -20px #00000077;
         }
 
         section.normal {
@@ -166,24 +165,11 @@
             100% { transform: rotate(0deg); }
         }
 
-        @media screen and (max-width: 800px) {
-            .hero {
-                flex-direction: column;
-                align-items: initial;
-                padding: 0;
-                justify-content: initial;
-                padding-top: 100px;
-            }
-
-            .note {
-                display: none;
-            }
-        }
-
         .feature-container {
             display: flex;
             align-items: center;
             gap: 20px;
+            border-radius: 15px;
         }
 
         .feature-container img {
@@ -224,6 +210,44 @@
             75%  { border-radius: 10px 10px 10px 30px; }
             100% { border-radius: 30px 10px 10px 10px; }
         }
+
+        @media screen and (max-width: 800px) {
+            .hero {
+                flex-direction: column;
+                align-items: initial;
+                padding: 0;
+                justify-content: initial;
+                padding-top: 100px;
+            }
+
+            .note {
+                display: none;
+            }
+
+            .feature-container, .feature-container.left, .feature-container.right {
+                flex-direction: column;
+                text-align: start;
+                background-color: var(--background-color-2);
+                border: 1px solid var(--border-light-color);
+                gap: 0;
+                overflow: hidden;
+                margin-top: 10px;
+            }
+
+            .feature-container img {
+                border-radius: 0;
+                width: 100%;
+                max-width: none;
+            }
+
+            .feature-container .feature-container-text {
+                margin: 5px;
+            }
+
+            .header-text {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
@@ -231,7 +255,7 @@
         <div>
             <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
                 <img src="cohesion/favicon.png" alt="" width="48">
-                <h2 translate="no">Cohesion</h2>
+                <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
         </div>
         <div style="display: flex; gap: 5px;">
@@ -258,8 +282,8 @@
                 </button>
             </div>
         </div>
-        <div style="perspective: 40cm;">
-            <img src="cohesion/scrshot.png" style="transform: rotateY(-20deg) rotateX(5deg);" alt="">
+        <div>
+            <img src="cohesion/scrshot.png" alt="">
         </div>
     </section>
 
@@ -267,43 +291,43 @@
         <h2>Features</h2>
         <p>this section is a work in progress with anime girls</p>
         <div class="feature-container left">
-            <img src="https://placewaifu.com/image/1920/1080" alt="">
-            <div>
+            <img src="cohesion/landing/markdown.png" alt="">
+            <div class="feature-container-text">
                 <h3>Markdown-Based</h3>
-                <p>Write fastly using extended Markdown, including tables, lists, code blocks, and more.</p>
+                <p>Write complex documents, including titles, lists, tables, codeblocks, only with a keyboard.</p>
             </div>
         </div>
         <div class="feature-container right">
             <img src="https://placewaifu.com/image/1920/1080" alt="">
-            <div>
+            <div class="feature-container-text">
                 <h3>In-browser local storage</h3>
                 <p>Your files are not sent to us, Cohesion saves your files in your browser data, you can also create backups of all your data in one single click.</p>
             </div>
         </div>
         <div class="feature-container left">
             <img src="cohesion/landing/themes.png" alt="">
-            <div>
+            <div class="feature-container-text">
                 <h3>Themes</h3>
                 <p>Personalize your experience with 8 themes. Switch between light and dark modes, or choose from unique palettes to make your writing environment more comfortable and inspiring.</p>
             </div>
         </div>
         <div class="feature-container right">
             <img src="https://placewaifu.com/image/1920/1080" alt="">
-            <div>
+            <div class="feature-container-text">
                 <h3>Easy export</h3>
                 <p>Export your notes to formats like PDF, HTML, or Markdown with just one click.</p>
             </div>
         </div>
         <div class="feature-container left">
             <img src="cohesion/landing/search.png" alt="">
-            <div>
+            <div class="feature-container-text">
                 <h3>Instant search</h3>
                 <p>Quickly find any note or piece of text using the built-in instant search, streamlining your workflow.</p>
             </div>
         </div>
         <div class="feature-container right">
             <img src="cohesion/landing/distraction.png" alt="">
-            <div>
+            <div class="feature-container-text">
                 <h3>Distraction-free editor</h3>
                 <p>Focused writing that hides menus and bars, allowing full concentration on the content.</p>
             </div>
