--- a/landing.html
+++ b/landing.html
@@ -93,7 +93,7 @@
         .scroll-content {
             display: inline-block;
             padding-right: 2em;
-            animation: scroll-left 86s linear infinite;
+            animation: scroll-left 43s linear infinite;
             will-change: transform;
         }
         .infinite-scroll.right .scroll-content {
@@ -294,7 +294,7 @@
             <img src="cohesion/landing/markdown.png" alt="">
             <div class="feature-container-text">
                 <h3>Markdown-Based</h3>
-                <p>Write complex documents, including titles, lists, tables, codeblocks, only with a keyboard.</p>
+                <p>Write complex documents — including titles, lists, tables, codeblocks, and more — only with a keyboard.</p>
             </div>
         </div>
         <div class="feature-container right">
@@ -337,8 +337,7 @@
     <section class="filler">
         <div class="infinite-scroll left">
             <div class="scroll-content">
-                Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion 
-                Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion 
+                Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion Cohesion
             </div>
         </div>
         <button class="primary filler-start-now" onclick="fadeOutAllDialogs()">
